[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokenizer"
path = "src/lib.rs"

[dependencies]
regex = "1.7.1"
itertools = "*"
lazy_static="1.4.0"
tokenizer_derive = {path = "./tokenizer_derive"}

